microservices/k3d/k3d-demo-service-node-red.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3d-demo-node-red-deployment
  namespace: k3d-demo-node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k3d-demo-node-red
  template:
    metadata:
      labels:
        app: k3d-demo-node-red
    spec:
      containers:
      - name: k3d-demo-node-red
        image: kalemena/node-red:latest
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1880
---
apiVersion: v1
kind: Service
metadata:
  name: k3d-demo-node-red
  namespace: k3d-demo-node-red
spec:
  ports:
  - port: 1880
    targetPort: 1880
    name: http
  selector:
    app: k3d-demo-node-red
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  namespace: k3d-demo-node-red
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: nodered.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k3d-demo-node-red
            port:
              number: 1880
